# Interpreter-with-Multi-Level-Feedback-Scheduler

./: CMakeLists.txt  README.md  main  main.c  pcb.h  queue.c  queue.h
dispatcher/: dispatcher.c  dispatcher.h
include/: STRING_OPERATIONS.h  dispatcher.h  insrtuction_set.h  memory.h  mlf_queue.h  mlf_sched.h  mutex.h  pcb.h  queue.h  semaphore.h
mlf/: mlf_queue.c  mlf_queue.h  mlf_sched.c  mlf_sched.h
src/: STRING_OPERATIONS.c  dispatcher.c  instruction_set.c  main.c  memory.c  mlf_queue.c  mlf_sched.c  mutex.c  pcb.c  queue.c  semaphore.c  tests.c
